<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        tools:context=".activities.RecommendNeedyActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etneedyName"
                style="@style/editText"
                android:background="@drawable/btn_rounded"
                android:hint="@string/needy_name"
                android:inputType="text"
                android:paddingStart="@dimen/et_padding"
                android:paddingEnd="@dimen/et_padding" />

            <EditText
                android:id="@+id/etState"
                style="@style/editText"
                android:background="@drawable/btn_rounded"
                android:hint="@string/state"
                android:paddingStart="@dimen/et_padding"
                android:paddingEnd="@dimen/et_padding"
                android:visibility="gone" />

            <EditText
                android:id="@+id/etPhoneNumber"
                style="@style/editText"
                android:background="@drawable/btn_rounded"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:paddingStart="@dimen/et_padding"
                android:paddingEnd="@dimen/et_padding" />

            <EditText
                android:id="@+id/etAddress"
                style="@style/editText"
                android:background="@drawable/btn_rounded"
                android:drawableEnd="@drawable/choose_address"
                android:focusable="false"
                android:hint="@string/address"
                android:paddingStart="@dimen/et_padding"
                android:paddingEnd="@dimen/et_padding" />

            <EditText
                android:id="@+id/etNotes"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_rounded"
                android:backgroundTint="@color/gray"
                android:gravity="start"
                android:textColor="@color/primary"
                android:hint="@string/notes_comments"
                android:padding="10dp"
                android:paddingStart="@dimen/et_padding"
                android:paddingEnd="@dimen/et_padding" />

            <Button
                style="@style/buttons"
                android:onClick="btnClick"
                android:tag="submit"
                android:text="@string/submit" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/progressBar" />
    </RelativeLayout>
</ScrollView>