<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical"
    tools:context=".activities.ui.more.MoreFragment">

    <RelativeLayout
        android:id="@+id/addNeedy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/add_needy"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/register_needy"
            android:backgroundTint="@color/primary" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/myPostedNeedies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/my_posted_needies"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/register_needy"
            android:backgroundTint="@color/primary" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sendFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/send_feedback"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/feedback"
            android:backgroundTint="@color/primary" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/shareApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/share"
            android:backgroundTint="@color/primary" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/logout"
            android:backgroundTint="@color/primary" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/our_goal"
        android:layout_marginTop="10dp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:textSize="22sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/our_goals"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="16sp" />    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/future_goals"
        android:layout_marginTop="10dp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:textSize="22sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/future_goals_donation"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="16sp" />

</LinearLayout>
</ScrollView>